# chatop

./: .dockerignore  .env.example  .gitattributes  .gitignore  BUILD.md  Dockerfile  Dockerfile.base  README.de.md  README.en.md  README.it.md  README.ja.md  README.md  README.ru.md  THIRD-PARTY-NOTICES.md  build-and-run.bat  build-and-run.sh  build-base.bat  build-base.sh  chatop-vnc.yaml  docker-compose.yml  env.example  kasmvnc.yaml
agent-bridge/: pyproject.toml
agent-bridge/agent_bridge/: event_adapter.py  main.py
agent-bridge/tests/: test_bridge_client.py  test_event_adapter.py
chacmd/: pyproject.toml  ruff.toml
chacmd/chacmd/: cli.py  config.py  container.py  workspace.py
chacmd/chacmd/adapters/: openhands_adapter.py
chacmd/chacmd/api/: app.py  schemas.py
chacmd/chacmd/domain/: events.py  models.py  repository.py  state.py
chacmd/chacmd/gateway/: bridge_gateway.py  protocol.py
chacmd/chacmd/interfaces/: agent_adapter.py  auth.py  chayuan_client.py  crypto.py  db.py  docker_sandbox.py  eventbus.py  nats_bus.py  registry.py  sandbox.py  transport.py
chacmd/chacmd/observability/: otel.py
chacmd/chacmd/orchestrator/: budget.py  dispatcher.py  ingest.py  lease.py  provisioner.py  registrar.py
chacmd/chacmd/shim/: anthropic_shim.py
chacmd/docs/: chacmd-m4-acceptance.md
chacmd/tests/: test_agent_adapter.py  test_anthropic_shim.py  test_api.py  test_auth.py  test_bridge_gateway.py  test_budget.py  test_chayuan_client.py  test_container.py  test_crypto.py  test_db.py  test_dispatcher.py  test_docker_sandbox.py  test_e2e_dispatch.py  test_e2e_m4.py  test_eventbus.py  test_ingest.py  test_interface_swap.py  test_lease.py  test_nats_bus.py  test_openhands_adapter.py  test_otel.py  test_provisioner.py  test_registrar.py  test_registry.py  test_repository.py  test_sandbox.py  test_smoke.py  test_state.py  test_transport.py  test_workspace.py
selkies-src/: Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
selkies-src/.devcontainer/: Dockerfile
selkies-src/.devcontainer/focal-fluxbox/: devcontainer.json
selkies-src/.devcontainer/focal-xfce/: devcontainer.json
selkies-src/.github/: FUNDING.yml
selkies-src/.github/ISSUE_TEMPLATE/: bug_report.md
selkies-src/dev/: build-gstreamer-ubuntu2004.sh  build-gstreamer-ubuntu2204.sh  build-gstreamer-ubuntu2404.sh  start-test-ubuntu2004.sh  start-test-ubuntu2204.sh  start-test-ubuntu2404.sh
selkies-src/docs/: README.md  component.md  development.md  faq.md  firewall.md  start.md  usage.md
selkies-src/src/: README.md
station/: pyproject.toml  start-station.sh
station/station/: __main__.py  actions.py  agentcfg_api.py  api.py  bundle.py  config.py  events.py  heartbeat.py  services.py  updater.py  updater_api.py
station/tests/: test_actions.py  test_adapter.py  test_agent_probes.py  test_agentcfg_api.py  test_api.py  test_build_bundle.sh  test_bundle.py  test_catalog.py  test_config_web_dir.py  test_dispatcher.py  test_e2e_hotupdate.sh  test_events.py  test_fetch_bundle.sh  test_heartbeat.py  test_seed_services.sh  test_services.py  test_session_watch.py  test_start_station_paths.sh  test_station_cli.py  test_store.py  test_system.py  test_updater.py  test_updater_api.py
(+415 files in other folders)
