[project]
name = "agent-bridge"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = ["websockets>=13"]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
