[project]
name = "chacmd"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "asyncpg>=0.29",
  "pydantic>=2.9",
  "httpx>=0.27",
  "websockets>=13",
  "nats-py>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
