[project]
name = "station"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.110,<1", "uvicorn>=0.30,<1", "psutil>=5.9"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["station*"]
